--- a/app/client/screen.styl
+++ b/app/client/screen.styl
@@ -9,7 +9,9 @@
 		word-wrap: break-word
 
 	.victim
-		font-size: 0.8em
+		
+		overflow: auto
+		max-height: 150px
 
 	.spinnerContainer
 		width:100px
