--- a/app/client/screen.styl
+++ b/app/client/screen.styl
@@ -1,4 +1,8 @@
+body
+	background-image: url(/bg.png)
 
+.panel
+	box-shadow: 2px 2px 6px #888888;
 
 .millerRabin textarea, .deterministicPrime textarea
 	width: 100%
